objects/ProductCatefory__c.object
<CustomObject>
    <fields>
        <fullName>Category__c</fullName>
        <label>Category</label>
        <referenceTo>Category__c</referenceTo>
        <relationshipLabel>ProductCatefory</relationshipLabel>
        <relationshipName>ProductCatefory</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>ProductCatefory</relationshipLabel>
        <relationshipName>ProductCatefory</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sequence__c</fullName>
        <label>Sequence</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>ProductCatefory</label>
    <nameField>
        <label>ProductCatefory Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ProductCatefory</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>